Rewrite blog as Q2 TrueSkill MCMC walkthrough; update listing copy

--- a/blog.html
+++ b/blog.html
@@ -38,8 +38,8 @@
             <div class="section-title">Writing</div>
             <div class="grid">
                 <div class="card">
-                    <h3><a href="blogs/assignment2_probabilistic_ml.html">Probabilistic ML: Assignment 2</a></h3>
-                    <p class="comment-line">Image denoising, HMC, and TrueSkill Bayesian inference.</p>
+                    <h3><a href="blogs/assignment2_probabilistic_ml.html">TrueSkill via MCMC — A Hands‑On Walkthrough</a></h3>
+                    <p class="comment-line">From matches to posterior skills, rankings, and win odds.</p>
                 </div>
                 <div class="card">
                     <h3><a href="blogs/shortest_path_reduction.html">A Modified Shortest Path Problem</a></h3>
