--- a/blogs/assignment2_probabilistic_ml.html
+++ b/blogs/assignment2_probabilistic_ml.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Probabilistic ML — Assignment 2</title>
+    <title>TrueSkill via MCMC — A Hands‑On Walkthrough</title>
     <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 </head>
@@ -35,42 +35,84 @@
 
     <main class="container">
         <article class="prose section">
-            <h1 class="mono">Probabilistic ML: Assignment 2</h1>
-            <p>Notes and results from coursework exploring <strong>image denoising</strong> via iterative belief updates and <strong>Bayesian inference</strong> with MCMC (TrueSkill and Hamiltonian Monte Carlo).</p>
+            <h1 class="mono">TrueSkill via MCMC — A hands‑on walkthrough</h1>
+            <p>This post walks through building a <strong>TrueSkill</strong> model and performing <strong>MCMC</strong> inference end‑to‑end: from matches → posterior skills → rankings → win‑probability queries. It’s a practical guide distilled from Assignment 2 (Q2).</p>
 
-            <h2 class="mono">Q1 — Image Denoising</h2>
-            <p>We implement an iterative <em>update_beliefs</em> routine to denoise a corrupted image under a simple Markov Random Field prior. The goal is to refine pixel posteriors by aggregating local evidence and neighbor influence.</p>
-            <pre class="code-card"><code>
-# call update_beliefs() once
-# (See notebook for full implementation and visualization.)
-            </code></pre>
+            <h2 class="mono">1) Problem setup</h2>
+            <p>We observe a set of matches. Each match is between Team A and Team B (one or more players per team) with a binary outcome (A wins vs B wins). Our goal is to infer latent <strong>skill</strong> values for each player and answer queries such as <em>Which team is stronger?</em> or <em>What’s the probability A beats B?</em></p>
 
-            <h2 class="mono">Q2 — MCMC in the TrueSkill Model</h2>
-            <p>We infer player skills from match outcomes using Bayesian inference. We compare sampling approaches and visualize posteriors, pairwise skill comparisons, and team rankings.</p>
-
-            <h3 class="mono">Hamiltonian Monte Carlo</h3>
-            <p>We explore HMC hyperparameters and show sample trajectories over a posterior contour for a 2D toy setup before scaling to the TrueSkill setting.</p>
-            <pre class="code-card"><code>
-# Hyperparameters
-# (From the notebook)
-# eps = ...; L = ...
-            </code></pre>
-
-            <h3 class="mono">Team ranking and queries</h3>
-            <p>From posterior samples, we compute mean skills per team, sort, and answer queries like: What is the probability Team A beats Team B? We estimate via Monte Carlo over samples.</p>
-            <pre class="code-card"><code>
-# Estimate P(A beats B) by sampling from posterior skill distributions
-# (See notebook for dataset loading and full pipeline.)
-            </code></pre>
-
-            <h2 class="mono">Takeaways</h2>
+            <h2 class="mono">2) Generative model (TrueSkill‑style)</h2>
             <ul>
-                <li>Belief propagation style updates can dramatically reduce noise under simple priors.</li>
-                <li>HMC offers efficient exploration of posteriors with tuned steps/trajectory length.</li>
-                <li>Probabilistic ranking models (TrueSkill) provide calibrated comparisons with uncertainty.</li>
+                <li><strong>Prior over skills</strong>: for each player i, <code>s_i ∼ Normal(μ0, σ0²)</code>.</li>
+                <li><strong>Performance</strong>: when a match occurs, player i’s performance is <code>p_i = s_i + ε_i</code> with <code>ε_i ∼ Normal(0, β²)</code>.</li>
+                <li><strong>Team performance</strong>: sums of member performances, e.g. <code>P_A = Σ_{i∈A} p_i</code>, <code>P_B = Σ_{j∈B} p_j</code>.</li>
+                <li><strong>Outcome</strong>: A wins if <code>D = P_A − P_B + ξ &gt; 0</code> where <code>ξ</code> is match noise (probit/logit link; probit keeps everything Gaussian).</li>
+            </ul>
+            <p>This yields a posterior <code>p(s | matches)</code> proportional to the product of win likelihoods and Gaussian priors. Closed forms are messy, so we use MCMC.</p>
+
+            <h2 class="mono">3) Data to factor graph</h2>
+            <p>We construct a sparse <em>design matrix</em> that maps players to teams and matches. For each match m, compute a signed sum of involved player skills to form the difference score <code>Δ_m = Σ s_i − Σ s_j</code>. The likelihood uses <code>Φ(Δ_m / σ)</code> (probit) or <code>σ(Δ_m)</code> (logit).</p>
+            <pre class="code-card"><code>
+# Pseudocode: design rows for match m
+# row[player] = +1 if in Team A; -1 if in Team B; 0 otherwise
+# Δ_m = dot(row, s)
+            </code></pre>
+
+            <h2 class="mono">4) Log posterior and (optional) gradient</h2>
+            <pre class="code-card"><code>
+# log posterior up to a constant (probit)
+logp(s) = Σ_m log Φ(y_m * Δ_m / σ)  +  Σ_i log N(s_i; μ0, σ0²)
+
+# If using a logistic link, replace Φ with sigmoid σ(x) = 1/(1+e^{-x}).
+# Gradients can be derived analytically or computed via autodiff.
+            </code></pre>
+
+            <h2 class="mono">5) Samplers</h2>
+            <ul>
+                <li><strong>Random‑walk Metropolis</strong>: simple, but tuning‑heavy and mixes slowly in correlated posteriors.</li>
+                <li><strong>Preconditioned Metropolis</strong>: scale proposals by player frequency to improve acceptance.</li>
+                <li><strong>Hamiltonian Monte Carlo (HMC)</strong>: uses gradients to explore <em>along</em> posterior contours; higher effective sample sizes per step.</li>
             </ul>
 
-            <p>If you want the full code and figures, open the source notebook: <code>Copy_of_CSC412_2025_Assignment_2.ipynb</code>.</p>
+            <h3 class="mono">HMC step (conceptual)</h3>
+            <pre class="code-card"><code>
+# s: current skills (vector), U(s) = -logp(s)
+# L leapfrog steps of size ε
+v ~ Normal(0, I)
+(s', v') = Leapfrog(s, v, ε, L, ∇U)
+accept with prob min(1, exp(H(s,v) - H(s',v')))
+            </code></pre>
+            <p>Start with small <code>ε</code> and moderate <code>L</code>. Target an acceptance rate around 0.6–0.8; adapt <code>ε</code> during warm‑up.</p>
+
+            <h2 class="mono">6) From samples to insights</h2>
+            <ul>
+                <li><strong>Player/Team rankings</strong>: rank by posterior mean skill; report uncertainty with credible intervals.</li>
+                <li><strong>Win probabilities</strong>: to estimate <code>P(A beats B)</code>, draw s from the chain and compute <code>Δ = Σ_{i∈A}s_i − Σ_{j∈B}s_j</code>; with probit, <code>P = Φ(Δ/σ)</code>. Average over samples.</li>
+            </ul>
+            <pre class="code-card"><code>
+# Monte Carlo query
+probs = []
+for s in samples:
+    delta = sum(s[i] for i in teamA) - sum(s[j] for j in teamB)
+    probs.append(Phi(delta / sigma))   # or sigmoid(delta) for logit
+P_A_beats_B = mean(probs)
+            </code></pre>
+
+            <h2 class="mono">7) Diagnostics</h2>
+            <ul>
+                <li><strong>Trace plots</strong>: look for stationarity and mixing across players.</li>
+                <li><strong>Autocorrelation / ESS</strong>: thin only if needed; prefer better tuning.</li>
+                <li><strong>R‑hat</strong>: run multiple chains and check convergence (<code>≈1.0</code>).</li>
+            </ul>
+
+            <h2 class="mono">8) Practical tips</h2>
+            <ul>
+                <li>Center skills at the prior mean to improve numerical stability.</li>
+                <li>Use a smaller <code>β</code> (performance noise) when matches are decisive; larger when volatile.</li>
+                <li>Precompute <code>Δ_m</code> with sparse ops; gradients become cheap matrix‑vector products.</li>
+            </ul>
+
+            <p>For complete code and figures, see the source notebook: <code>Copy_of_CSC412_2025_Assignment_2.ipynb</code>. This page focuses on the <em>Q2 MCMC</em> portion as a practical walkthrough.</p>
         </article>
     </main>
 
