Recruiter pass: homepage Skills/Highlights; expand Latest Writing. Flesh out Agentic Jira project; add threading Quickstart & benchmarks.

--- a/index.html
+++ b/index.html
@@ -102,11 +102,50 @@
     </section>
 
     <section class="section">
+        <div class="section-title">Skills</div>
+        <div class="tags" style="gap:10px;">
+            <span class="tag">AI Agents</span>
+            <span class="tag">LLM Apps</span>
+            <span class="tag">MLOps</span>
+            <span class="tag">Distributed Systems</span>
+            <span class="tag">Runtimes</span>
+            <span class="tag">C/C++</span>
+            <span class="tag">Python</span>
+            <span class="tag">Rust</span>
+            <span class="tag">Kubernetes</span>
+            <span class="tag">AWS</span>
+            <span class="tag">GCP</span>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="section-title">Highlights</div>
+        <div class="grid">
+            <div class="card">
+                <h3 class="mono">Agentic Jira → PR Automation</h3>
+                <p class="comment-line">Reduced PR prep time by turning Jira tickets into ready‑to‑merge branches with structured plans and guardrails.</p>
+            </div>
+            <div class="card">
+                <h3 class="mono">Pre‑emptive User‑Level Threads</h3>
+                <p class="comment-line">Timer‑driven preemption and user‑space sync primitives for high‑throughput runtimes in C.</p>
+            </div>
+            <div class="card">
+                <h3 class="mono">ML for Protein Engineering</h3>
+                <p class="comment-line">Redesigned PETase variants with sequence models and structure prediction to improve properties.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="section">
         <div class="section-title">Latest Writing</div>
         <div class="grid">
             <div class="card">
                 <h3><a href="blogs/shortest_path_reduction.html">A Modified Shortest Path Problem</a></h3>
                 <p class="comment-line">Graph transform for constrained shortest path; proofs + visuals.</p>
+            </div>
+            <div class="card">
+                <h3><a href="blogs/assignment2_probabilistic_ml.html">TrueSkill via MCMC — A Hands‑On Walkthrough</a></h3>
+                <p class="comment-line">From matches to posterior skills, rankings, and win odds.</p>
             </div>
         </div>
     </section>
