Make cards clickable site-wide; link Highlights to projects; add focus/hover states

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section class="section">
         <div class="section-title">Featured Projects</div>
         <div class="grid">
-            <div class="card">
+            <div class="card" data-href="projects/PETase_redesign.html">
                 <img class="thumb" src="images/petase_poster.jpg" alt="PETase redesign" />
                 <h3>PETase Redesign</h3>
                 <p class="comment-line">ML-guided sequence optimization for a PET-degrading enzyme.</p>
@@ -71,10 +71,10 @@
                     <span class="tag">Deep Learning</span>
                 </div>
                 <div class="links">
-                    <a href="projects/PETase_redesign.html">Details</a>
+                    <a href="projects/PETase_redesign.html" data-no-card-click>Details</a>
                 </div>
             </div>
-            <div class="card">
+            <div class="card" data-href="projects/agentic_jira_parser.html">
                 <img class="thumb contain" src="images/agentic-ai.png" alt="Agentic Jira parser" />
                 <h3>Agentic Jira Parser & PR Creator</h3>
                 <p class="comment-line">Parse tickets, plan edits, open PRs autonomously.</p>
@@ -83,10 +83,10 @@
                     <span class="tag">DevTools</span>
                 </div>
                 <div class="links">
-                    <a href="projects/agentic_jira_parser.html">Details</a>
+                    <a href="projects/agentic_jira_parser.html" data-no-card-click>Details</a>
                 </div>
             </div>
-            <div class="card">
+            <div class="card" data-href="projects/ULP_threading.html">
                 <img class="thumb contain" src="images/preemptive_threading.png" alt="Pre‑emptive threading" />
                 <h3>Pre‑emptive User‑Level Threading (C)</h3>
                 <p class="comment-line">Timer-driven preemption, scheduler, and sync primitives.</p>
@@ -95,7 +95,7 @@
                     <span class="tag">OS</span>
                 </div>
                 <div class="links">
-                    <a href="projects/ULP_threading.html">Details</a>
+                    <a href="projects/ULP_threading.html" data-no-card-click>Details</a>
                 </div>
             </div>
         </div>
@@ -121,16 +121,16 @@
     <section class="section">
         <div class="section-title">Highlights</div>
         <div class="grid">
-            <div class="card">
-                <h3 class="mono">Agentic Jira → PR Automation</h3>
+            <div class="card" data-href="projects/agentic_jira_parser.html">
+                <h3 class="mono"><a href="projects/agentic_jira_parser.html" data-no-card-click>Agentic Jira → PR Automation</a></h3>
                 <p class="comment-line">Reduced PR prep time by turning Jira tickets into ready‑to‑merge branches with structured plans and guardrails.</p>
             </div>
-            <div class="card">
-                <h3 class="mono">Pre‑emptive User‑Level Threads</h3>
+            <div class="card" data-href="projects/ULP_threading.html">
+                <h3 class="mono"><a href="projects/ULP_threading.html" data-no-card-click>Pre‑emptive User‑Level Threads</a></h3>
                 <p class="comment-line">Timer‑driven preemption and user‑space sync primitives for high‑throughput runtimes in C.</p>
             </div>
-            <div class="card">
-                <h3 class="mono">ML for Protein Engineering</h3>
+            <div class="card" data-href="projects/PETase_redesign.html">
+                <h3 class="mono"><a href="projects/PETase_redesign.html" data-no-card-click>ML for Protein Engineering</a></h3>
                 <p class="comment-line">Redesigned PETase variants with sequence models and structure prediction to improve properties.</p>
             </div>
         </div>
