Rewrite TrueSkill post to remove assignment refs; rename file and update links. Expand Modified Shortest Path with motivation, construction, correctness, and complexity.

--- a/blog.html
+++ b/blog.html
@@ -37,8 +37,8 @@
         <section class="section">
             <div class="section-title">Writing</div>
             <div class="grid">
-                <div class="card">
-                    <h3><a href="blogs/assignment2_probabilistic_ml.html">TrueSkill via MCMC — A Hands‑On Walkthrough</a></h3>
+                <div class="card" data-href="blogs/trueskill_mcmc_walkthrough.html">
+                    <h3><a href="blogs/trueskill_mcmc_walkthrough.html" data-no-card-click>TrueSkill via MCMC — A Hands‑On Walkthrough</a></h3>
                     <p class="comment-line">From matches to posterior skills, rankings, and win odds.</p>
                 </div>
                 <div class="card">
