--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
                 <h3><a href="blogs/shortest_path_reduction.html">A Modified Shortest Path Problem</a></h3>
                 <p class="comment-line">Graph transform for constrained shortest path; proofs + visuals.</p>
             </div>
-            <div class="card">
-                <h3><a href="blogs/assignment2_probabilistic_ml.html">TrueSkill via MCMC — A Hands‑On Walkthrough</a></h3>
+            <div class="card" data-href="blogs/trueskill_mcmc_walkthrough.html">
+                <h3><a href="blogs/trueskill_mcmc_walkthrough.html" data-no-card-click>TrueSkill via MCMC — A Hands‑On Walkthrough</a></h3>
                 <p class="comment-line">From matches to posterior skills, rankings, and win odds.</p>
             </div>
         </div>
