About: embed resume PDF and add LinkedIn/GitHub links; add PDF styles

--- a/about.html
+++ b/about.html
@@ -40,6 +40,11 @@
                 <div>
                     <h1 class="mono">About Me</h1>
                     <p>Building performant systems and applied ML; CS + Math @ UofT.</p>
+                    <div class="pdf-actions" style="margin-top:10px;">
+                        <a href="v2_Connors_Resume.pdf" target="_blank" rel="noopener noreferrer">View Resume (PDF)</a>
+                        <a href="https://www.linkedin.com/in/connorsicheri" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+                        <a href="https://github.com/connorsicheri" target="_blank" rel="noopener noreferrer">GitHub</a>
+                    </div>
                 </div>
             </div>
             <div class="timeline">
@@ -66,6 +71,11 @@
                     <div class="text">Golden hour rides across Copenhagen’s bridges—quiet, windy, perfect.</div>
                 </div>
             </div>
+        </section>
+
+        <section class="section">
+            <div class="section-title mono">Resume</div>
+            <embed class="pdf-frame" src="v2_Connors_Resume.pdf" type="application/pdf" />
         </section>
     </main>
 
