About: update LinkedIn URL and simplify 'Life outside code' copy

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
                     <p>Building performant systems and applied ML; CS + Math @ UofT.</p>
                     <div class="pdf-actions" style="margin-top:10px;">
                         <a href="v2_Connors_Resume.pdf" target="_blank" rel="noopener noreferrer">View Resume (PDF)</a>
-                        <a href="https://www.linkedin.com/in/connorsicheri" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/connor-sicheri/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
                         <a href="https://github.com/connorsicheri" target="_blank" rel="noopener noreferrer">GitHub</a>
                     </div>
                 </div>
@@ -64,11 +64,11 @@
             <div class="vstack">
                 <div class="vrow">
                     <div class="image"><img src="images/hiking.jpeg" alt="Banff trail ridge"></div>
-                    <div class="text">Long ridge days in Banff. Nothing resets the mind like altitude and a map.</div>
+                    <div class="text">I like hiking and spending time outdoors.</div>
                 </div>
                 <div class="vrow reverse">
                     <div class="image"><img src="images/bridge.jpeg" alt="Copenhagen bridge at dusk"></div>
-                    <div class="text">Golden hour rides across Copenhagen’s bridges—quiet, windy, perfect.</div>
+                    <div class="text">I also enjoy cycling around cities when I travel.</div>
                 </div>
             </div>
         </section>
