Tone: modest homepage title; rewrite About intro and simplify timeline

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                 <img class="avatar" src="images/face.jpeg" alt="Connor portrait" />
                 <div>
                     <h1 class="mono">About Me</h1>
-                    <p>Building performant systems and applied ML; CS + Math @ UofT.</p>
+                    <p>I'm an undergraduate studying CS and Math at the University of Toronto. I like building practical software, with recent work in AI applications and systems.</p>
                     <div class="pdf-actions" style="margin-top:10px;">
                         <a href="v2_Connors_Resume.pdf" target="_blank" rel="noopener noreferrer">View Resume (PDF)</a>
                         <a href="https://www.linkedin.com/in/connor-sicheri/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
@@ -50,11 +50,11 @@
             <div class="timeline">
                 <div class="item">
                     <h4 class="mono">Research — ML for Protein Engineering</h4>
-                    <p>Sequence design and structure prediction; stability and activity in‑silico.</p>
+                    <p>Worked on protein sequence design and structure prediction.</p>
                 </div>
                 <div class="item">
                     <h4 class="mono">Systems — Runtimes and Storage</h4>
-                    <p>User‑level threads and filesystem; contention, scheduling, durability.</p>
+                    <p>Built a user‑level thread library and explored scheduling and synchronization.</p>
                 </div>
             </div>
         </section>
