Title: modest hero line. About: restore intro; set photo captions to Banff/Copenhagen.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section class="hero">
         <div class="content">
             <div>
-                <h1 class="title mono">I build software and enjoy working on AI and systems.</h1>
+                <h1 class="title mono">Software engineer focused on AI and systems.</h1>
                 <p class="subtitle">Designing agents, runtimes, and infrastructure — from research to production.</p>
                 <div class="actions">
                     <a class="btn primary" href="projects.html">View Projects</a>
