--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                 <img class="avatar" src="images/face.jpeg" alt="Connor portrait" />
                 <div>
                     <h1 class="mono">About Me</h1>
-                    <p>I'm an undergraduate studying CS and Math at the University of Toronto. I like building practical software, with recent work in AI applications and systems.</p>
+                    <p>Building performant systems and applied ML; CS + Math @ UofT.</p>
                     <div class="pdf-actions" style="margin-top:10px;">
                         <a href="v2_Connors_Resume.pdf" target="_blank" rel="noopener noreferrer">View Resume (PDF)</a>
                         <a href="https://www.linkedin.com/in/connor-sicheri/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
@@ -64,11 +64,11 @@
             <div class="vstack">
                 <div class="vrow">
                     <div class="image"><img src="images/hiking.jpeg" alt="Banff trail ridge"></div>
-                    <div class="text">I like hiking and spending time outdoors.</div>
+                    <div class="text">Banff</div>
                 </div>
                 <div class="vrow reverse">
                     <div class="image"><img src="images/bridge.jpeg" alt="Copenhagen bridge at dusk"></div>
-                    <div class="text">I also enjoy cycling around cities when I travel.</div>
+                    <div class="text">Copenhagen</div>
                 </div>
             </div>
         </section>
