--- a/about.html
+++ b/about.html
@@ -64,11 +64,11 @@
             <div class="vstack">
                 <div class="vrow">
                     <div class="image"><img src="images/hiking.jpeg" alt="Banff trail ridge"></div>
-                    <div class="text">Banff</div>
+                    <div class="text">Hiking in Banff National Park</div>
                 </div>
                 <div class="vrow reverse">
                     <div class="image"><img src="images/bridge.jpeg" alt="Copenhagen bridge at dusk"></div>
-                    <div class="text">Copenhagen</div>
+                    <div class="text">Exploring Copenhagen</div>
                 </div>
             </div>
         </section>
