Update main page hero text and add updated resume without m-dashes

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <section class="hero">
         <div class="content">
             <div>
-                <h1 class="title mono">Software engineer - Building AI infrastructure and optimizing systems.</h1>
-                <p class="subtitle">Designing agents, runtimes, and infrastructure — from research to production.</p>
+                <h1 class="title mono">Backend engineer building scalable systems and ML infrastructure.</h1>
+                <p class="subtitle">From protein design pipelines to production authentication systems serving 1M+ users. Currently at League Inc., previously researching at SickKids.</p>
                 <div class="actions">
                     <a class="btn primary" href="projects.html">View Projects</a>
                     <a class="btn" href="about.html">About Me</a>
