Update resume links to use Connors_Resume_Jan_2026.pdf

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                     <h1 class="mono">About Me</h1>
                     <p>Building performant systems and applied ML; CS + Math @ UofT.</p>
                     <div class="pdf-actions" style="margin-top:10px;">
-                        <a href="v2_Connors_Resume.pdf" target="_blank" rel="noopener noreferrer">View Resume (PDF)</a>
+                        <a href="Connors_Resume_Jan_2026.pdf" target="_blank" rel="noopener noreferrer">View Resume (PDF)</a>
                         <a href="https://www.linkedin.com/in/connor-sicheri/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
                         <a href="https://github.com/connorsicheri" target="_blank" rel="noopener noreferrer">GitHub</a>
                     </div>
@@ -75,7 +75,7 @@
 
         <section class="section">
             <div class="section-title mono">Resume</div>
-            <embed class="pdf-frame" src="v2_Connors_Resume.pdf" type="application/pdf" />
+            <embed class="pdf-frame" src="Connors_Resume_Jan_2026.pdf" type="application/pdf" />
         </section>
     </main>
 
