--- a/projects/nerf_renderer.html
+++ b/projects/nerf_renderer.html
@@ -45,11 +45,12 @@
             <p>A complete PyTorch implementation of NeRF for <strong>3D scene reconstruction</strong> and <strong>novel-view synthesis</strong>, producing photorealistic renders from arbitrary viewpoints.</p>
 
             <h2 class="mono">Demo Video</h2>
-            <div class="video-container">
-                <!-- TODO: Add video here -->
-                <p style="text-align:center; padding: 60px 20px; background: var(--bg-alt); border-radius: 8px;">
-                    <em>Video coming soon</em>
-                </p>
+            <p style="margin-bottom: 12px;"><em>Novel-view synthesis after only 2000 iterations on a small architecture:</em></p>
+            <div class="video-container" style="max-width: 800px; margin: 0 auto;">
+                <video controls style="width: 100%; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+                    <source src="../videos/lego.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
             </div>
 
             <h2 class="mono">Overview</h2>
