Add NeRF title image and fix video playback with absolute path

--- a/projects.html
+++ b/projects.html
@@ -50,6 +50,7 @@
                     </div>
                 </div>
                 <div class="card">
+                    <img class="thumb" src="images/nerf_title.jpeg" alt="NeRF renderer" />
                     <h3>Neural Radiance Fields (NeRF) Renderer</h3>
                     <p class="comment-line">Complete NeRF implementation for 3D scene reconstruction and photorealistic novel-view synthesis.</p>
                     <div class="tags">
