Update video element with explicit dimensions and download link

--- a/projects/nerf_renderer.html
+++ b/projects/nerf_renderer.html
@@ -49,11 +49,11 @@
             </div>
 
             <h2 class="mono">Demo Video</h2>
-            <p style="margin-bottom: 12px;"><em>Novel-view synthesis after only 2000 iterations on a small architecture:</em></p>
-            <div class="video-container" style="max-width: 800px; margin: 0 auto;">
-                <video controls preload="metadata" playsinline muted loop style="width: 100%; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
-                    <source src="/videos/lego.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
+            <p style="margin-bottom: 12px;"><em>Novel-view synthesis after only 2000 iterations on a small architecture:</em> <a href="../videos/lego.mp4" download style="font-size: 0.9em;">[Download MP4]</a></p>
+            <div class="video-container" style="max-width: 800px; margin: 0 auto; margin-bottom: 16px;">
+                <video width="800" height="600" controls playsinline style="width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+                    <source src="../videos/lego.mp4" type="video/mp4">
+                    <p>Your browser doesn't support HTML5 video. <a href="../videos/lego.mp4">Download the video</a> instead.</p>
                 </video>
             </div>
 
