Add hidden birthday surprise page for girlfriend
- Create for-you.html with romantic birthday theme
- Red & pink hearts design with floating animations
- Poem, Spotify embed, and Alice Phoebe Lou concert reveal
- Add hidden link in about.html footer

--- a/about.html
+++ b/about.html
@@ -80,7 +80,10 @@
     </main>
 
     <footer>
-        <div class="container">&copy; 2025 Connor Sicheri. All Rights Reserved.</div>
+        <div class="container">
+            &copy; 2025 Connor Sicheri. All Rights Reserved.
+            <a href="for-you.html" style="display:block; margin-top:8px; font-size:10px; opacity:0.15; text-decoration:none; transition:opacity 0.3s;" onmouseover="this.style.opacity='0.6'" onmouseout="this.style.opacity='0.15'">for my pretty girlfriend ♡</a>
+        </div>
     </footer>
     <script src="assets/js/theme.js"></script>
 </body>
